--- a/seedream4/config.json
+++ b/seedream4/config.json
@@ -1,7 +1,7 @@
 {
   "image_count": 100,
   "text_prompt_template": "我在做一个收纳游戏，帮我生成{1}个主题，例如：西双版纳，猎人的家等等，用逗号隔开，中文",
-  "image_prompt_template": "手绘卡通,2d,{1},室内布局,50-60个物品,画面丰富紧凑,色彩丰富,家具造型优美有特色,比例 16:9。没有人物。颜色靓丽,没有人物。",
+  "image_prompt_template": "手绘卡通,2d,{1},室内布局,50-60个物品,画面丰富紧凑,色彩丰富,家具造型优美有特色,不要都放地上，要有层次感，比例 16:9。没有人物。颜色靓丽,没有人物。",
   "text_model": "kimi-k2-250905",
   "image_model": "doubao-seedream-4-0-250828",
   "image_size": "2K",
