--- a/seedream4/config.json
+++ b/seedream4/config.json
@@ -1,9 +1,10 @@
 {
   "image_count": 100,
-  "text_prompt_template": "我在做一个收纳游戏，帮我生成{1}个主题，例如：西双版纳，猎人的家等等，用逗号隔开，中文",
-  "image_prompt_template": "手绘卡通,2d,{1},室内布局,50-60个物品,画面丰富紧凑,色彩丰富,家具造型优美有特色,不要都放地上，要有层次感，比例 16:9。没有人物。颜色靓丽,没有人物。",
+  "text_prompt_template": "我在做一个收纳游戏，帮我生成{1}个主题，例如：西双版纳，猎人的家，湘西小居等等，用逗号隔开，中文",
+  "image_prompt_template": "手绘卡通,2d,{1},室内布局,50-60个物品,画面丰富紧凑,色彩丰富,家具造型优美有特色,不要都放地上，结构不要有大块没有物品的地方，比例 16:9。没有人物。颜色靓丽,没有人物。",
   "text_model": "kimi-k2-250905",
   "image_model": "doubao-seedream-4-0-250828",
+  "api_key": "58b81751-2138-479e-80d0-3d22b215bd97",
   "image_size": "2K",
   "max_images_per_prompt": 3,
   "watermark": true,
