--- a/seedream4/config.json
+++ b/seedream4/config.json
@@ -1,5 +1,6 @@
 {
   "image_count": 100,
+  "themes": "江南水乡的船屋，川藏高原的牧帐，画家的阳光画室，面包师的烘焙小屋，徽派古宅的书房，北京四合院的厢房，森林深处的木屋，海边渔村的渔舍，汉服工作室的衣箱，非遗剪纸的工作台，80 年代家庭客厅，民国洋行办公室，魔法学院药剂室，精灵王国树屋，学生书桌抽屉，妈妈的衣帽间，咖啡馆储物间，书店书架角落，花店冷藏柜，玩具店展示架，木匠工具房，园丁温室，摄影师暗房，厨师后厨，程序员电脑桌，作家写作台，手工皮具坊工作台，陶艺家窑房，茶艺师茶室，酿酒师酒窖，甜品师裱花台，宠物店寄养区，图书馆古籍库，博物馆文物储藏室，考古队帐篷，登山队背包，潜水员装备箱，露营者帐篷内部，农场谷仓，牧场挤奶房，果园仓库，酒庄橡木桶区，电影院放映室，剧院后台化妆间，舞蹈室更衣室，健身房储物柜，瑜伽馆道具房，画室颜料架，书法室笔墨柜，古筝老师琴房，吉他手琴盒，小提琴家谱架，裁缝裁衣台，染布坊染缸区，制香师香料柜，香薰店陈列架，蜡烛工坊蜡池，手工皂店晾皂架，蜂蜜农场蜂箱储藏室，养蜂人工具包，花店花材冷藏室，水族店鱼缸区，爬宠店饲养箱，鸟类养殖场鸟笼房，马场马具室，射箭馆箭筒架，击剑馆装备柜，台球室球杆架，乒乓球馆球盒，羽毛球馆球拍袋，篮球馆储物箱，足球俱乐部更衣室，网球馆球筒架，高尔夫球包柜，滑雪度假村雪具室，滑冰场冰鞋柜，游泳馆储物柜，温泉酒店换衣间，民宿客房衣柜，酒店前台储物台，超市生鲜冷柜，便利店货架，水果店果篮，蔬菜店菜筐，肉铺冷柜，鱼摊水箱，文具店笔架，饰品店首饰盒，化妆品店展示柜，服装店试衣间，鞋店鞋柜，包包店陈列架，眼镜店镜片柜，钟表店维修台，五金店零件盒，电器店仓库，手机店配件柜，电脑店装机台，家具店仓储区，家居店收纳盒货架，婴儿用品店奶瓶架，儿童乐园玩具柜，亲子餐厅游乐储物，养老院老人房间，医院药房，诊所治疗室，牙科器械柜，兽医诊所宠物笼，实验室试剂柜，研究所样本库，天文台望远镜室，太空站储物舱，海底基地物资库，极地考察站宿舍，沙漠探险队驼队行囊，热带雨林部落竹楼，草原牧民毡房，黄土高原窑洞，东北雪乡火炕房，云南大理白族民居，福建土楼中庭，广东骑楼商铺，香港茶餐厅后厨，台湾夜市小吃摊储物，日本和风榻榻米房间，韩国韩式泡菜坛储藏室，泰国泰式香料柜，印度纱丽店衣架，埃及金字塔密室（虚构），希腊爱琴海白屋，意大利威尼斯贡多拉储物，法国酒庄酒窖，德国啤酒屋酒桶区，英国城堡军械库，美国西部牛仔牧场，澳大利亚农场仓库，巴西热带雨林木屋，俄罗斯冰屋储物，加拿大枫糖作坊，墨西哥玛雅风格小屋，肯尼亚保护区帐篷，南非草原营地储物间",
   "text_prompt_template": "我在做一个收纳游戏，帮我生成{1}个主题，例如：西双版纳，猎人的家，湘西小居等等，用逗号隔开，中文",
   "image_prompt_template": "手绘卡通,2d,{1},室内布局,50-60个物品,画面丰富紧凑,色彩丰富,家具造型优美有特色,不要都放地上，结构不要有大块没有物品的地方，比例 16:9。没有人物。颜色靓丽,没有人物。",
   "text_model": "kimi-k2-250905",
